# audioRecorder

./: AudioRecorder Readme.md  Readme.md  compile.sh  injector  injector.cpp  settings.gradle
.obsidian/: workspace.json
AudioServerMods/: module.prop  sepolicy.rule
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hook.cpp  hookModifier.cpp  injector.cpp
app/src/main/java/com/example/audiorecorder/: InjectionService.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
injectorDir/: injector  injector.cpp  seLinuxBypass.cpp  seLinuxBypass.h
myhooklib/jni/: Android.mk  file_utils.cpp  file_utils.h  hook.cpp  packet.cpp  packet.h  vad.cpp  vad.h
